# CED_Detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.yaml
data/redwood_scan/apartment/: mesh_213.pcd  mesh_214.pcd
data/redwood_scan/loft/: mesh_240.pcd
include/: ced_3d.h  ced_6d.h  loop_timer.h  perception.h  random_keypoint.h  remove_nan.h  sift_xyzrgbn.h
include/impl/: ced_3d.hpp  ced_6d.hpp  perception.hpp  random_keypoint.hpp
scripts/: view_keypoint.py
src/: test_keypoint.cpp  test_registration.cpp
